Added Netty Resource Pack Hosting